# my-django-example

./: pyproject.toml  shell.nix
src/base/: urls.py  views.py
src/base/templates/base/: index.html
src/blog/: urls.py  views.py
src/blog/templates/blog/: index.html
src/django_web/: settings.py  urls.py
src/landingpage/: urls.py  views.py
src/landingpage/templates/landingpage/: index.html
src/login/: urls.py  views.py
src/login/templates/login/: index.html
