[project]
name = "my_django_web"
version = "0.1.0"
description = ""
authors = [
    {name = "mahaputrailhamawal", email = "mahaputrailhamawal@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
    "granian>=1.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
